[gd_scene load_steps=8 format=2]

[ext_resource path="res://Path2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/Temp/SmokeSprite.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=7]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.496377, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 1, 300, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 0.2
color_ramp = SubResource( 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50, 300 )

[node name="DeathFog" type="Path2D"]
curve = SubResource( 7 )
script = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
loop = false

[node name="Particles2D" type="Particles2D" parent="PathFollow2D"]
position = Vector2( 50, 0 )
amount = 100
randomness = 1.0
visibility_rect = Rect2( -100, -400, 200, 800 )
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Area2D"]
shape = SubResource( 6 )

[node name="Node" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="Node"]
width = 450.0
default_color = Color( 0, 0, 0, 0.392157 )

[node name="LineTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="PathFollow2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="LineTimer" to="." method="_on_Timer_timeout"]
